# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
locale/ru/LC_MESSAGES/: django.po
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: tasks.json  users.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_remove_labels_timestamp.py  0003_labels_timestamp.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0003_remove_statuses_timestamp.py  0004_statuses_timestamp.py
task_manager/tasks/: filter.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  create.html  index.html  label-create.html  label-remove.html  label-update.html  labels.html  status-create.html  status-remove.html  statuses.html  task-create.html  task-preview.html  task-remove.html  task-update.html  tasks.html  user-remove.html  user-update.html  users.html
task_manager/templates/registration/: login.html
task_manager/users/: models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_remove_user_timestampedmodel_ptr_and_more.py
tests/: test_main.py
